--- a/webclient/src/styles/App.scss
+++ b/webclient/src/styles/App.scss
@@ -1,13 +1,3 @@
-:root[theme="dark"]{
-    --bg-tab:#3d3d3d;
-    --bg-tab-content: #242424;
-  }
-  
-  :root[theme="light"]{
-    --bg-tab:#ededed;
-    --bg-tab-content: #cacaca;
-  }
-  
   header{
     display: inline-flex;
     position: relative;
@@ -15,35 +5,25 @@
   }
   
   h1{
+    background-color: var(--bg-tab);
     width: 100%;
     height: 15%;
-    text-align: center;
+    padding: 15px;
   }
   
-  .klee-one-regular {
-    font-family: "Klee One", cursive;
-    font-weight: 400;
-    font-style: normal;
+  .drawer{
+    background-color: var(--bg-tab);
+    color: var(--color);
+    height: 100%;
   }
   
-  .page{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
+  .page{    
     width: 95%;
     height: 95%;
   
     transition: opacity 1s, visibility 1s;
   
-    opacity: 0;
-    visibility: hidden;
-  }
-  
-  .page-shown{
     opacity: 1;
-    transition-delay: 1s;
     visibility: visible;
   }
   
