--- a/webclient/src/styles/App.scss
+++ b/webclient/src/styles/App.scss
@@ -4,7 +4,7 @@
     width: 100%;
   }
   
-  h1{
+  h1:not(.firebaseui-title){
     background-color: var(--bg-tab);
     width: 100%;
     height: 15%;
